--- a/Section 8/8.4 Web Design Agency Project/style.css
+++ b/Section 8/8.4 Web Design Agency Project/style.css
@@ -10,6 +10,20 @@ body {
   flex: 1;
 }
 
+.left{
+  display: inline-block;
+}
+
+.right{
+  display: inline-block;
+}
+
+
+
+span{
+  color: midnightblue;
+}
+
 h1 {
   font-size: 5rem;
 }
@@ -17,5 +31,6 @@ h1 {
 footer {
   text-align: right;
   color: midnightblue;
+  clear: both;
 }
 
