--- a/Section 7/7.0 CSS Cascade/style.css
+++ b/Section 7/7.0 CSS Cascade/style.css
@@ -10,3 +10,15 @@ p {
   margin: 0;
   padding: 0;
 }
+
+.inner-box{
+  background-color: red;
+}
+
+.white-text{
+  color: white;
+}
+
+#outer-box{
+  background-color: purple;
+}
