--- a/Section 17/styles.css
+++ b/Section 17/styles.css
@@ -1,4 +1,70 @@
-.container {
+body{
+  background-color: #393E46;
+}
+
+.container{
+  text-align: center;
+  width: 70%;
+  margin: auto;
+}
+
+h1{
+  margin: 30px;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 8rem;
+  color: #4ECCA3;
+}
+
+
+p {
+  font-size: 2rem;
+  color: #4ECCA3;
+  font-family: 'Indie Flower', cursive;
+}
+
+img {
+  width: 80%;
+}
+
+.dice {
+  text-align: center;
+  display: inline-block;
+
+}
+
+footer {
+  margin-top: 5%;
+  color: #EEEEEE;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .container {
   width: 70%;
   margin: auto;
   text-align: center;
@@ -38,4 +104,4 @@ footer {
   text-align: center;
   font-family: 'Indie Flower', cursive;
 
-}
+} */
