--- a/Section 25/25.2 Passing Data/views/index.ejs
+++ b/Section 25/25.2 Passing Data/views/index.ejs
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+  <% if (locals.numLet) {%>
+      <h1>There are <%=numLet%> litters in your name!</h1> 
+  <% } else{%>
+      <h1>Enter your name below!</h1>
+  <%}%> 
   <!-- Write your code here -->
   <form action="/submit" method="POST">
     <input type="text" name="fName" placeholder="First name">
