--- a/Section 25/25.4 Band Generator Project/views/index.ejs
+++ b/Section 25/25.4 Band Generator Project/views/index.ejs
@@ -1,12 +1,18 @@
 <!-- Step 3 Add Header -->
-
+<%-include("partials/header.ejs")%>
 
 <!-- Step 2 - If an adjective and noun are sent to this ejs file, 
     Change the h1 to show the adjective and noun.
     But when the user first goes on the website and there is no adjective and noun, 
     Show the default h1 below -->
+<% if(locals.nou && locals.adje) {%>
+  <h1><%=adje%> <%=nou%> </h1>
+<%} else {%>
+  <h1>Click below to generate your bandname!</h1>
+<%};%>
 
 <form action="/submit" method="POST">
   <input type="submit" value="Generate Name">
 </form>
 <!-- Step 3 Add Footer -->
+<%-include("partials/footer.ejs")%>
