--- a/Section 28/28.3 Axios/views/index.ejs
+++ b/Section 28/28.3 Axios/views/index.ejs
@@ -33,26 +33,27 @@
       </select>
       <button type="submit" class="form-submit">Go</button>
     </form>
+    <%if(locals.data){%>
     <section id="cards" class="cards">
       <article class="card-item">
         <h2 class="card-activity">
-          <!-- Show Activity -->
+          <%=data.activity%>
         </h2>
         <div class="card-info">
           <span class="card-type">
-            <!-- Show Activity type -->
+            <%=data.type%>
           </span>
           <span class="card-participants">
-            <!-- participants: Show participant number -->
+            <%=data.participants%>
             <span class="card-number"></span>
           </span>
         </div>
       </article>
-
-
+      <%} else {%>
       <div id="tag-error" class="tag-error">
-        <!-- Show any errors that were sent from the backend -->
+        <h1>Your required thingy doesn't exist</h1>
       </div>
+      <%}%>
 
     </section>
   </div>
